@@ -36,19 +36,15 @@ extern "C" {
 #pragma pack(push,1)
 #include <commctrl.h>
 
-#define BIF_RETURNONLYFSDIRS 1
-#define BIF_DONTGOBELOWDOMAIN 2
-#define BIF_STATUSTEXT 4
-#define BIF_RETURNFSANCESTORS 8
-#define BIF_EDITBOX 16
-#define BIF_VALIDATE 32
-#define BIF_NEWDIALOGSTYLE 64
-#define BIF_BROWSEINCLUDEURLS 128
-#define BIF_USENEWUI ( BIF_EDITBOX | BIF_NEWDIALOGSTYLE )
-#define BIF_BROWSEFORCOMPUTER 0x1000
-#define BIF_BROWSEFORPRINTER 0x2000
-#define BIF_BROWSEINCLUDEFILES 0x4000
-#define BIF_SHAREABLE 0x8000
+#define BIF_RETURNONLYFSDIRS	0x00000001
+#define BIF_DONTGOBELOWDOMAIN	0x00000002
+#define BIF_STATUSTEXT		0x00000004
+#define BIF_RETURNFSANCESTORS   0x00000008
+#define BIF_EDITBOX		0x00000010
+#define BIF_VALIDATE		0x00000020
+#define BIF_BROWSEFORCOMPUTER	0x00001000
+#define BIF_BROWSEFORPRINTER	0x00002000
+#define BIF_BROWSEINCLUDEFILES	0x00004000
 #define BFFM_INITIALIZED 1
 #define BFFM_SELCHANGED 2
 #define BFFM_VALIDATEFAILEDA 3
@@ -1418,6 +1414,10 @@ HRESULT WINAPI SHGetFolderLocation(HWND,int,HANDLE,DWORD,LPITEMIDLIST*);
 #endif
 
 #if (_WIN32_WINNT >= _WIN32_WINNT_WIN2K)
+#define BIF_NEWDIALOGSTYLE	0x00000040
+#define BIF_BROWSEINCLUDEURLS	0x00000080
+#define BIF_USENEWUI ( BIF_EDITBOX | BIF_NEWDIALOGSTYLE )
+#define BIF_SHAREABLE		0x00008000
 typedef struct {
 	BOOL fShowAllObjects : 1;
 	BOOL fShowExtensions : 1;
@@ -1515,7 +1515,15 @@ HRESULT WINAPI SHGetFolderPathAndSubDirW(HWND,int,HANDLE,DWORD,LPCWSTR,LPWSTR);
 HRESULT WINAPI SHParseDisplayName(LPCWSTR,IBindCtx*,LPITEMIDLIST,SFGAOF,SFGAOF*);
 #define SHGetFolderPathAndSubDir __AW(SHGetFolderPathAndSubDir)
 
+#define BIF_UAHINT		0x00000100
+#define BIF_NONEWFOLDERBUTTON	0x00000200
+#define BIF_NOTRANSLATETARGETS	0x00000400
+
 #endif /* _WIN32_WINNT >= _WIN32_WINNT_WINXP */
+
+#if (_WIN32_WINNT >= _WIN32_WINNT_WIN7)
+#define BIF_BROWSEFILEJUNCTIONS 0x00010000
+#endif /* (_WIN32_WINNT >= _WIN32_WINNT_WIN7) */
 
 #pragma pack(pop)
 
